--- a/apps/web/pages/setup/drugs/index.module.less
+++ b/apps/web/pages/setup/drugs/index.module.less
@@ -279,9 +279,10 @@
   text-transform: none;
   cursor: not-allowed;
 }
-:global .ant-popover-content {
-  max-width: 130px !important;
-}
+//TODO: make this pure!
+// :global .ant-popover-content {
+//   max-width: 130px !important;
+// }
 
 .paginationDiv {
   @media screen and (max-width: 767px) {
