--- a/apps/web/pages/setup/drugs/index.module.less
+++ b/apps/web/pages/setup/drugs/index.module.less
@@ -1,4 +1,7 @@
 .setupDragsContainer {
+  :global .ant-popover-content {
+    max-width: 130px !important;
+  }
   :global {
     @media (max-width: 767px) {
       .ant-layout {
@@ -279,10 +282,6 @@
   text-transform: none;
   cursor: not-allowed;
 }
-//TODO: make this pure!
-// :global .ant-popover-content {
-//   max-width: 130px !important;
-// }
 
 .paginationDiv {
   @media screen and (max-width: 767px) {
